force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/leankor__ExpenseResourceAssignment__c.object-meta.xml
<CustomObject>
    <description>Resource Assignments that are associated to forecasted expenses.</description>
    <label>Expense Resource Assignment</label>
    <nameField>
        <displayFormat>ERA-{0000000000}</displayFormat>
        <label>Expense Resource Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Resource Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>