force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__Amount__c.field-meta.xml
<CustomField>
    <fullName>leankor__Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The value of the assigned resource.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>