force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>leankor__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated resource person.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExpenseResourceAssignments_User</relationshipName>
    <type>Lookup</type>
</CustomField>