force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__Date__c.field-meta.xml
<CustomField>
    <fullName>leankor__Date__c</fullName>
    <description>The date of forecast.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>