force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__DueDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__DueDateTime__c</fullName>
    <description>The due date and time of the work item (activity/card) where the resource is assigned at the time of forecast.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>