force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__Expense__c.field-meta.xml
<CustomField>
    <fullName>leankor__Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated expense.</description>
    <label>Expense</label>
    <referenceTo>leankor__Expense__c</referenceTo>
    <relationshipLabel>Expense Resource Assignments</relationshipLabel>
    <relationshipName>ExpenseResourceAssignments_Expense</relationshipName>
    <type>Lookup</type>
</CustomField>