force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__NumberOfWorkingDays__c.field-meta.xml
<CustomField>
    <fullName>leankor__NumberOfWorkingDays__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Number of working days at the time of forecast.</description>
    <label>Number Of Working Days</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>