force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__PercentCompleted__c.field-meta.xml
<CustomField>
    <fullName>leankor__PercentCompleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percent Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>