force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__ProjectCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectCurrencyCode__c</fullName>
    <description>Project currency ISO code.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Currency Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>