force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__ProjectCurrencyRate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectCurrencyRate__c</fullName>
    <description>Project currency conversion rate.</description>
    <label>Project Currency Rate</label>
    <precision>14</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>