force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__ResourceAssignment__c.field-meta.xml
<CustomField>
    <fullName>leankor__ResourceAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated resource assignment.</description>
    <label>Resource Assignment</label>
    <referenceTo>leankor__ResourceAssignment__c</referenceTo>
    <relationshipLabel>Expense Resource Assignments</relationshipLabel>
    <relationshipName>ExpenseResourceAssignments_Resource</relationshipName>
    <type>Lookup</type>
</CustomField>