force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__ResourceCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>leankor__ResourceCurrencyCode__c</fullName>
    <description>Resource currency ISO code.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resource Currency Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>