force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__ResourceCurrencyRate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ResourceCurrencyRate__c</fullName>
    <description>Resource currency conversion rate.</description>
    <label>Resource Currency Rate</label>
    <precision>14</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>