force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__ResourceType__c.field-meta.xml
<CustomField>
    <fullName>leankor__ResourceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resource type that is associated with the record at the time of assignment. The values in Expense Category, Expense Sub-Category and Expense Account may differ with the values in Resource Type.</description>
    <label>Resource Type</label>
    <referenceTo>leankor__ResourceType__c</referenceTo>
    <relationshipLabel>Expense Resource Assignments</relationshipLabel>
    <relationshipName>ExpenseResourceAssignments_ResourceType</relationshipName>
    <type>Lookup</type>
</CustomField>