force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDateTime__c</fullName>
    <description>The start date and time of the work item (activity/card) where the resource is assigned at the time of forecast.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>