force-app/main/default/objects/leankor__ExpenseResourceAssignment__c/fields/leankor__WorkingHoursPerDay__c.field-meta.xml
<CustomField>
    <fullName>leankor__WorkingHoursPerDay__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Working hours per day.</description>
    <label>Working Hours Per Day</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>